# tmux-repl-mcp

./: .gitignore  DESIGN.md  README.md  ROADMAP.md  original-ip  pyproject.toml
integration_tests/: check_last_line.py  debug_execute.py  debug_extract.py  debug_repl.py  debug_repl_detailed.py  debug_send_keys.py  debug_tool_call.py  debug_wait.py  simulate_tools.py  test_fix.py  test_fixed_execute.py  test_pattern.py
src/tmux_repl_mcp/: __init__.py  config.py  core.py  server.py
tests/: test_core.py  test_regression.py  test_server.py
