[project]
name = "tmux-repl-mcp"
version = "0.1.0"
description = "MCP server for interacting with a REPL running inside a tmux pane"
readme = "README.md"
authors = [
    { name = "Daniel Jay Haskin", email = "djhaskin987@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.scripts]
tmux-repl-mcp = "tmux_repl_mcp:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
